syntax = "proto3";
option go_package = "gitlab.com/nunet/device-management-service/stats_db/event_listener_spec";
// package event_listener_spec;

message NewDeviceOnboardedInput {
    string peer_id = 1; 
    float cpu = 2;
    float ram = 3;
    float network = 4;
    float dedicated_time = 5; 
    float timestamp = 6;
}

message NewDeviceOnboardedOutput {
    string peer_id = 1;
}

message DeviceStatusChangeInput{
    string peer_id = 1; 
    string status = 2;
    float timestamp = 3 ;
}

message DeviceStatusChangeOutput{
    string peer_id = 1;
}

message DeviceResource {
    float cpu = 1; 
    float ram = 2;
    float network = 3;
    float dedicated_time = 4; 
}

message DeviceResourceChangeInput{
    string peer_id = 1; 
    DeviceResource changed_attribute_and_value = 2;
    float timestamp = 3;
}

message DeviceResourceChangeOutput{
    string peer_id = 1;
}

message DeviceResourceConfigInput{
    string peer_id = 1; 
    DeviceResource changed_attribute_and_value = 2;
    float timestamp = 3;
}

message DeviceResourceConfigOutput{
    string response = 1;
}

message NewServiceInput{
    string service_id = 1; 
    string service_name = 2; 
    string service_description = 3; 
    float timestamp = 4;
}

message NewServiceOutput{
    string response = 1;
}

message ServiceStatusInput{
    string service_id = 1;
    string peer_id = 2;
    string online_offline_status = 3; 
    float timestamp = 4; 
}

message ServiceStatusOutput{
    string response = 1;
}

message ServiceCallInput{
    float call_id = 1;
    string peer_id_of_service_host = 2; 
    string service_id = 3;
    float cpu_used = 4; 
    float max_ram = 5; 
    float memory_used = 6;
    float network_bw_used = 7; 
    float time_taken = 8;
    string  status = 9; 
    float timestamp = 10;
}

message ServiceCallOutput{
    string response = 1;
}

message ServiceRunInput{
    float call_id = 1;
    string peer_id_of_service_host = 2; 
    string  status = 3; 
    float timestamp = 4;
}

message ServiceRunOutput{
    string response = 1;
}

message ServiceRemoveInput{
    string service_id = 1; 
    float timestamp = 2;
}

message ServiceRemoveOutput{
    string response = 1;
}

message NtxPaymentInput{
    float amount_of_ntx = 1;
    string service_id = 2; 
    string peer_id = 3;
    float timestamp = 4;
}

message NtxPaymentOutput{
    string response = 1;
}

message HeartBeatInput{
    string peer_id = 1;
}

message HeartBeatOutput{
    string peer_id = 1;
}

service EventListener {

    // New Procedures
    rpc new_device_onboarded(NewDeviceOnboardedInput) returns (NewDeviceOnboardedOutput) {}
    
    rpc device_status_change(DeviceStatusChangeInput) returns (DeviceStatusChangeOutput) {}

    rpc device_resource_change(DeviceResourceChangeInput) returns (DeviceResourceChangeOutput) {}

    rpc device_resource_config(DeviceResourceConfigInput) returns (DeviceResourceConfigOutput) {}

    rpc new_service(NewServiceInput) returns (NewServiceOutput) {}

    rpc service_status(ServiceStatusInput) returns (ServiceStatusOutput) {}

    rpc service_call(ServiceCallInput) returns (ServiceCallOutput) {}
    
    rpc service_run(ServiceRunInput) returns (ServiceRunOutput) {}

    rpc service_remove(ServiceRemoveInput) returns (ServiceRemoveOutput) {}
    
    rpc ntx_payment(NtxPaymentInput) returns (NtxPaymentOutput) {}

    rpc heart_beat(HeartBeatInput) returns (HeartBeatOutput) {}

}

